Change minimal frequency guess from 12 to 16MHz

G550 seems to lock up with frequencies below 16MHz.

Reported by Benjamin Wong <hackerb9@u.washington.edu> in
http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=430112
and https://bugs.freedesktop.org/show_bug.cgi?id=11339